Tue Mar 07 09:36:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2417_Regression/Bug_2417_Regression.mpc:
          Added threads as base project

Tue Mar  7 07:51:52 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/LifeCycle_Service/Makefile.am:

          Regenerated.

        * orbsvcs/LifeCycle_Service/LifeCycle_Service.mpc:

          Changed to not inherit from 'core' so LifeCycle_Service
          executable is not installed.  It's not a stand-alone service
          like the others in ${TAO_ROOT}/orbsvcs, it is an example for use
          with ${TAO_ROOT}/examples/Quoter.  After x.5.1 we'll try to find
          a better place for this.  See bugzilla issue 2410.

Tue Mar  7 07:40:37 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * examples/AMI/FL_Callback/Makefile.am:
        * tao/Makefile.am:

          Regenerated for autoconf FL & QT Reactor / FL & QT Resource
          Factory support.

Mon Mar 06 20:08:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Transport.h:
          Doxygen improvement

Mon Mar 06 19:19:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Incoming_Message_Queue.cpp:
          Doxygen improvements

Mon Mar 06 16:00:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Event/ECG_CDR_Message_Sender.cpp:
          Use prefix increment instead of postfix

Mon Mar 06 15:57:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Invocation_Adapter.cpp:
          Removed a not needed local variable.

        * tao/IIOP_Transport.cpp:
          Initialise pointer with 0

Mon Mar 06 15:56:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OBV/Factory/OBV_Factory.mpc:
        * tests/OBV/Forward/OBV_Forward.mpc:
        * tests/OBV/TC_Alignment/OBV_TC_Alignment.mpc:
        * tests/OBV/ValueBox/valuebox.mpc:
          Use more specific base projects

        * tests/OBV/Supports/Supports_Test.mpc: