@@ -1,0 +1,6 @@
+project(*Test) : orbsvcsexe, taoidldefaults, portablegroup, portableserver {
+  exename = uipmc_test
+  Source_Files {
+    Hello.cpp
+  }
+}
