@@ -1,0 +1,9 @@
+// $Id$
+module Test {
+
+    interface Hello {
+        oneway void say_hello(in short count);
+    };
+
+
+};
